feat: Support downloading helicorder images in frontend
