# server/endpoints/v1/helicorder/bind.go
@@ -1,4 +1,4 @@
-package mseed
+package helicorder
 
 import (
 	"errors"
@@ -6,27 +6,27 @@ import (
 
 	"github.com/anyshake/observer/server/response"
 	"github.com/anyshake/observer/services"
-	"github.com/anyshake/observer/services/miniseed"
+	"github.com/anyshake/observer/services/helicorder"
 	"github.com/anyshake/observer/utils/logger"
 	jwt "github.com/appleboy/gin-jwt/v2"
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary MiniSEED Data
-// @Description This API returns a list of MiniSEED files or exports a specific MiniSEED file. This API requires a valid JWT token if the server is in restricted mode.
-// @Router /mseed [post]
+// @Summary Helicorder Image
+// @Description This API returns a list of helicorders or exports a specific helicorder image. This API requires a valid JWT token if the server is in restricted mode.
+// @Router /helicorder [post]
 // @Produce application/json
 // @Produce application/octet-stream
 // @Security ApiKeyAuth
-// @Param action formData string true "Action to be performed, Use `list` to get list of MiniSEED files, `export` to export a specific MiniSEED file."
-// @Param name formData string false "A valid filename of the MiniSEED file to be exported, only required when action is `export`."
+// @Param action formData string true "Action to be performed, Use `list` to get list of helicorders, `export` to export a specific helicorder image."
+// @Param name formData string false "A valid filename of the helicorder image to be exported, only required when action is `export`."
 // @Param Authorization header string false "Bearer JWT token, only required when the server is in restricted mode."
-func (h *MSeed) Bind(rg *gin.RouterGroup, jwtHandler *jwt.GinJWTMiddleware, options *services.Options) error {
-	// Get MiniSEED service configuration
-	var miniseedService miniseed.MiniSeedService
-	serviceConfig, ok := options.Config.Services[miniseedService.GetServiceName()]
+func (h *HeliCorder) Bind(rg *gin.RouterGroup, jwtHandler *jwt.GinJWTMiddleware, options *services.Options) error {
+	// Get helicorder service configuration
+	var helicorderService helicorder.HelicorderService
+	serviceConfig, ok := options.Config.Services[helicorderService.GetServiceName()]
 	if !ok {
-		return errors.New("failed to get configuration for MiniSEED service")
+		return errors.New("failed to get configuration for helicorder service")
 	}
 	basePath := serviceConfig.(map[string]any)["path"].(string)
 	lifeCycle := int(serviceConfig.(map[string]any)["lifecycle"].(float64))
@@ -54,13 +54,13 @@ func (h *MSeed) Bind(rg *gin.RouterGroup, jwtHandler *jwt.GinJWTMiddleware, opti
 			)
 			if err != nil {
 				logger.GetLogger(h.GetApiName()).Errorln(err)
-				response.Message(c, options.TimeSource, "failed to list MiniSEED files", http.StatusInternalServerError, nil)
+				response.Message(c, options.TimeSource, "failed to list helicorder files", http.StatusInternalServerError, nil)
 				return
 			}
-			response.Message(c, options.TimeSource, "successfully get list of MiniSEED files", http.StatusOK, fileList)
+			response.Message(c, options.TimeSource, "successfully get list of helicorder files", http.StatusOK, fileList)
 		case "export":
 			if len(req.Name) == 0 {
-				err := errors.New("name of MiniSEED file cannot be empty")
+				err := errors.New("name of helicorder file cannot be empty")
 				logger.GetLogger(h.GetApiName()).Errorln(err)
 				response.Message(c, options.TimeSource, err.Error(), http.StatusBadRequest, nil)
 				return
@@ -69,7 +69,7 @@ func (h *MSeed) Bind(rg *gin.RouterGroup, jwtHandler *jwt.GinJWTMiddleware, opti
 			fileBytes, err := h.handleExport(basePath, req.Name)
 			if err != nil {
 				logger.GetLogger(h.GetApiName()).Errorln(err)
-				response.Message(c, options.TimeSource, "failed to export MiniSEED file", http.StatusInternalServerError, nil)
+				response.Message(c, options.TimeSource, "failed to export helicorder image", http.StatusInternalServerError, nil)
 				return
 			}
 
@@ -77,6 +77,6 @@ func (h *MSeed) Bind(rg *gin.RouterGroup, jwtHandler *jwt.GinJWTMiddleware, opti
 		}
 	})
 
-	rg.POST("/mseed", handlerFunc...)
+	rg.POST("/helicorder", handlerFunc...)
 	return nil
 }
